--- a/src/style.css
+++ b/src/style.css
@@ -59,3 +59,8 @@ body .content .column button{
 body .content .column *::placeholder {
     color: #B3B3B3;
 }
+
+body footer {
+    text-align: center;
+    margin-top: 10rem;
+}
